projects/vb6parse/snapshots/syntax/library/statements/setattr/setattr_multiple_on_same_line.snap
---
source: projects/vb6parse/src/syntax/library/statements/filesystem/setattr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SetAttrStatement
      children:
        - kind: SetAttrKeyword
          text: SetAttr
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"File1.txt\""
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: vbNormal
    - kind: ColonOperator
      text: ":"
    - kind: Whitespace
      text: " "
    - kind: SetAttrStatement
      children:
        - kind: SetAttrKeyword
          text: SetAttr
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"File2.txt\""
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: vbReadOnly
    - kind: Newline
      text: "\n"
